--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,20 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "bootstrap/bootstrap";
+@import "bootstrap/todc-bootstrap";
+@import "font-awesome/font-awesome";
+@import "theme/style";
+@import "theme/color_3";
 
+@media (max-width: 767px) {
+    #top_header {
+        height: inherit;
+    }
+}
+
+#top_header .user_info {
+    margin-top: 11px;
+
+    .caret {
+        margin-left: 5px;
+        margin-top: -2px;
+    }
+}
