--- a/public/css/app.css
+++ b/public/css/app.css
@@ -222,7 +222,8 @@ table {
   .dropup > .btn > .caret {
     border-top-color: #000 !important; }
   .label {
-    border: 1px solid #000; }
+    border: 1px solid #000;
+   }
   .table {
     border-collapse: collapse !important; }
   .table-bordered th,
@@ -657,7 +658,9 @@ pre code {
 
 .row {
   margin-right: -15px;
-  margin-left: -15px; }
+  margin-left: -15px;
+  /*margin-top: 10px; */
+  padding-top: 20px;}
 
 .row:before,
 .row:after {
@@ -722,9 +725,13 @@ pre code {
 .col-xs-12,
 .col-sm-12,
 .col-md-12,
-.col-lg-12 {
+.col-lg-12,
+.col-xs-12-updatepartner,
+.col-xs-13-updatepartner
+
+ {
   position: relative;
-  min-height: 1px;
+  /*min-height: 1px;*/
   padding-right: 15px;
   padding-left: 15px; }
 
@@ -741,8 +748,21 @@ pre code {
 .col-xs-11 {
   float: left; }
 
+.col-xs-12-updatepartner
+{
+  width: 15%;
+  height: 1px;
+ 
+}
+.col-xs-13-updatepartner
+{
+  width: 30%;
+  height: 1px;
+  
+}
 .col-xs-12 {
-  width: 100%; }
+  width: 100%;
+   }
 
 .col-xs-11 {
   width: 91.66666666666666%; }
@@ -760,19 +780,32 @@ pre code {
   width: 58.333333333333336%; }
 
 .col-xs-6 {
-  width: 50%; }
+  width: 15%;
+   }
+
 
 .col-xs-5 {
-  width: 41.66666666666667%; }
+  width: 41.66666666666667%; 
+  margin-top: 14px;}
 
 .col-xs-4 {
-  width: 33.33333333333333%; }
+  width: 17%;
+  display: inline-block;
+
+}
 
 .col-xs-3 {
-  width: 25%; }
+  width: 25%;
+  height: 1px;
+  margin-top: -11px;
+  margin-bottom: 60px;
+  }
 
 .col-xs-2 {
-  width: 16.666666666666664%; }
+  width: 16.666666666666664%; 
+  height: 1px;
+  margin-top: -10px;
+}
 
 .col-xs-1 {
   width: 8.333333333333332%; }
@@ -1040,7 +1073,8 @@ pre code {
   .col-md-7 {
     width: 58.333333333333336%; }
   .col-md-6 {
-    width: 50%; }
+    width: 50%;
+      }
   .col-md-5 {
     width: 41.66666666666667%; }
   .col-md-4 {
@@ -1461,7 +1495,9 @@ legend {
 label {
   display: inline-block;
   margin-bottom: 5px;
-  font-weight: bold; }
+  font-weight: bold;
+  
+   }
 
 input[type="search"] {
   box-sizing: border-box; }
@@ -1546,8 +1582,12 @@ fieldset[disabled] .form-control {
 textarea.form-control {
   height: auto; }
 
+
 .form-group {
-  margin-bottom: 15px; }
+  margin-top: 10px;
+  margin-bottom: 5px;
+ 
+   }
 
 .radio,
 .checkbox {
@@ -1570,7 +1610,9 @@ textarea.form-control {
 .checkbox input[type="checkbox"],
 .checkbox-inline input[type="checkbox"] {
   float: left;
-  margin-left: -20px; }
+  margin-left: -20px;
+
+   }
 
 .radio + .radio,
 .checkbox + .checkbox {
@@ -1588,7 +1630,8 @@ textarea.form-control {
 .radio-inline + .radio-inline,
 .checkbox-inline + .checkbox-inline {
   margin-top: 0;
-  margin-left: 10px; }
+  margin-left: 10px; 
+ }
 
 input[type="radio"][disabled],
 input[type="checkbox"][disabled],
@@ -4547,10 +4590,12 @@ a.list-group-item.active:focus .list-group-item-text {
   border-bottom: 0; }
 
 .panel-heading {
-  padding: 10px 15px;
+  
   border-bottom: 1px solid transparent;
   border-top-right-radius: 3px;
-  border-top-left-radius: 3px; }
+  border-top-left-radius: 3px;
+  padding-top: 20px;
+  }
 
 .panel-heading > .dropdown .dropdown-toggle {
   color: inherit; }
@@ -5867,7 +5912,7 @@ input[type="checkbox"]:checked::after, .checkbox input[type="checkbox"]:checked:
   top: -6px;
   left: -5px;
   display: block;
-  content: url(../../img/checkmark.png); }
+  content: url(../../images/check.png); }
 
 .input-sm {
   height: 26px;
@@ -10362,7 +10407,7 @@ body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom
   font-size: 13px; }
 
 input[type="checkbox"]:checked::after, .checkbox input[type="checkbox"]:checked::after, .checkbox-inline input[type="checkbox"]:checked::after {
-  content: url(../img/checkmark.png);
+  content: url(../images/check.png);
   top: -5px;
   width: 21px;
   height: 21px; }
@@ -13815,3 +13860,89 @@ body.side_fixed_open #text_nav_side_fixed .parent_active > a {
     margin-top: -2px; }
 
 /*# sourceMappingURL=app.css.map */
+
+/*my additional css*/
+
+.col-xs-14-updatepartner
+{
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  float: left;
+  width: 16.666666666666664%; 
+  height: 1px;
+  margin-top: -9px;
+
+}
+
+.col-xs-15-updatepartner
+{
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  float: left;
+  width: 35%; 
+  height: 1px;
+  margin-top: 17px;
+  margin-bottom: 18px;
+
+}
+
+.col-xs-16-updatepartner
+{
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  float: left;
+  width: 20%; 
+  height: 1px;
+  margin-top: 17px;
+  margin-bottom: 18px;
+
+}
+.col-xs-17-updatepartner
+{
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  float: left;
+  width: 20%; 
+  margin-bottom:  5px;
+  border-radius: 2px;
+}
+
+.col-xs-updatepartner
+{
+    position: relative;
+    width: 30%; 
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+}
+
+.col-xs-updatecontact
+{
+    position: relative;
+    width: 30%; 
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+}
+.col-xs-1-updatecontact
+{
+    position: relative;
+    width: 30%; 
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+}
+
+.p
+{
+  display: inline;
+}
+
